separated notebook in different python files

--- a/IATA_Simulator.ipynb
+++ b/IATA_Simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "f5956260",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "f6ca97f6",
    "metadata": {},
    "outputs": [],
@@ -244,42 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "f1323b6b",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  1.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  1.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0. -1.  0. -0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  1.  0.]\n",
-      " [ 0.  0.  0.  0.  0. -0.  0. -1.]]\n"
+     "ename": "AttributeError",
+     "evalue": "'State' object has no attribute 'control_gate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 13\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39m# print(qstate.produce_measurement())\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m# print(qstate.produce_measurement())\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39m# print(qstate.produce_measurement())\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39m# qstate.plot_state_probabilities()\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(qstate.produce_specific_measurement(0))\u001b[39;00m\n\u001b[1;32m     12\u001b[0m gate_matrix \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]])\n\u001b[0;32m---> 13\u001b[0m qstate\u001b[39m.\u001b[39;49mcontrol_gate(\u001b[39m0\u001b[39m,\u001b[39m2\u001b[39m, gate_matrix)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'State' object has no attribute 'control_gate'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0., -1.,  0., -0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0., -0.,  0., -1.]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -308,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "id": "971e85bf",
    "metadata": {},
    "outputs": [],
@@ -367,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "id": "d49e1369",
    "metadata": {},
    "outputs": [],
@@ -443,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "id": "38329f3b",
    "metadata": {},
    "outputs": [],
@@ -481,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "id": "f162643d",
    "metadata": {},
    "outputs": [
@@ -512,7 +492,7 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0., -1.]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "id": "20829920",
    "metadata": {},
    "outputs": [],
@@ -569,16 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "id": "ef63695c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  1.]\n",
-      " [ 0. -1.]]\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dim, gate \u001b[39m=\u001b[39m create_custom_gate()\n\u001b[1;32m      2\u001b[0m qstate\u001b[39m.\u001b[39mapply_gate(gate, dim, \u001b[39m3\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(qstate\u001b[39m.\u001b[39mproduce_measurement())\n",
+      "Cell \u001b[0;32mIn[27], line 4\u001b[0m, in \u001b[0;36mcreate_custom_gate\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate_custom_gate\u001b[39m():\n\u001b[0;32m----> 4\u001b[0m     dim \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mEnter no qubits affected:\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m      5\u001b[0m     gates \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter list of gates separated by space:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m     list_gates \u001b[39m=\u001b[39m gates\u001b[39m.\u001b[39msplit()\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -590,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6f4a81f7",
    "metadata": {},
    "outputs": [],
@@ -600,11 +584,19 @@
     "    pass\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f63f3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -619,6 +611,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
