modified:   IATA_Simulator.ipynb 	new file:   backend.py 	new file:   file.wav 	new file:   file1.wav 	new file:   qmusicgen.py 	new file:   qrandomnrgen.py 	modified:   server.py

--- a/IATA_Simulator.ipynb
+++ b/IATA_Simulator.ipynb
@@ -302,7 +302,7 @@
     "    def initialize_gate(self, gate_values):\n",
     "        assert np.shape(gate_values) == (self.dim, self.dim)\n",
     "        for i in range(self.dim):\n",
-    "            for j in range(slef.dim):\n",
+    "            for j in range(self.dim):\n",
     "                self.gate[i][j] = gate_values[i][j]\n",
     "    def compute_transpose(self):\n",
     "        L, W = np.shape(self.gate)\n",
